added trajectory plotting function -> 1.0.3

--- a/user_manual/user_manual.tex
+++ b/user_manual/user_manual.tex
@@ -66,7 +66,7 @@
 
 \begin{minipage}{14cm}
 	{\small \sffamily
-	Version: 1.0.2 \\
+	Version: 1.0.3 \\
 	Last updated: \today \\
 	Github repository: \url{https://github.com/ronshnapp/MyPTV} \\
 	Get help \& interact with our community: \url{https://github.com/ronshnapp/MyPTV/discussions}\\
@@ -423,6 +423,7 @@ where \texttt{"command"} should be replaced with one of the following options, d
 	"2D_tracking"
 	"manual_matching"
 	"fiber_orientations"
+	"plot_trajectories"
 	"run_extention"
 \end{verbatim}
 %
@@ -1230,6 +1231,29 @@ To measure fiber orientations, we use, again the workflow script. We do this via
 		\hline
 	\end{tabular}
 \end{table}
+
+
+
+
+
+
+
+\subsection{Plotting the results} \label{sec:plot_trajectories}
+
+Once the post processing is finished, you might want to plot the results. 
+A basic 3D rendering pf the trajectories obtained can be established with
+the workflow command \texttt{plot\_trajectories}.
+
+
+
+
+
+
+
+
+
+
+
 
 
 
