--- a/user_manual/user_manual.tex
+++ b/user_manual/user_manual.tex
@@ -66,7 +66,7 @@
 
 \begin{minipage}{14cm}
 	{\small \sffamily
-	Version: 1.0.4 \\
+	Version: 1.1.0 \\
 	Last updated: \today \\
 	Github repository: \url{https://github.com/ronshnapp/MyPTV} \\
 	Get help \& interact with our community: \url{https://github.com/ronshnapp/MyPTV/discussions}\\
@@ -939,7 +939,13 @@ Note: to easily perform manual stereo matching of several points in a given imag
 
 \subsection{Tracking}\label{sec:workflow_track}
 
-The tracking step is used to link particles in the lab-space coordinates in time, thus forming the 3D trajectories. The tracking algorithm in MyPTV uses the 4 frames best estimate method described in~\cite{Ouellette2006}. The description of the parameters used in the tracking step are given in Tab.~\ref{tab:tracking_params}. 
+The tracking step is used to link particles in the lab-space coordinates in time, thus forming the 3D trajectories. To initiate the tracking we use the workflow command \texttt{"tracking"}. 
+
+There are two tracking methods that have been implemented in MyPTV and the users can choose which one suits their needs best. The first algorithm is the "4 frames best estimate" tracking algorithm that was described in Ref.~\cite{Ouellette2006}. The second method, tentatively called here "multiframe" is a new adaptation of the best estimate algorithm. Its main advantage is that it is capable of linking particle trajectories over more than one frame, namely in cases where the particle was miss-identified in one of the images or if the was a glitch in its stereo matching. Its downside is that it might take longer time to process in particle-dense experiments and that it will not yield trajectories shorter than a given length tentatively called here the noise scale (\texttt{Ns}). The multiframe algorithm was not yet described in a paper, as it is a very recent addition. The description of the parameters used in the tracking step are given in Tab.~\ref{tab:tracking_params}. 
+
+
+
+
 
 
 
@@ -955,6 +961,8 @@ The tracking step is used to link particles in the lab-space coordinates in time
 		
 		\texttt{particles\_file\_name} & path name of the file which holds the 3D coordinates of particles, namely the results of the matching step  \\[.2cm]
 		
+		\texttt{method} & Here we choose the algorithm used for the tracking; can be either 'multiframe' of 'fourframe' (see Sec.~\ref{sec:workflow_track}). \\[.2cm]
+		
 		\texttt{frame\_start} & if \texttt{None} will start tracking from the first available frame. If an integer it will start the tracking from this given number. \\[.2cm]
 		
 		\texttt{N\_frames} & if \texttt{None} will iterate over particles in all frames; if an integer will only track particles in the first \texttt{N} frames of the particles file\\[.2cm]
@@ -962,6 +970,12 @@ The tracking step is used to link particles in the lab-space coordinates in time
 		\texttt{d\_max} & the maximum translation in lab space coordinates \\[.2cm]
 		
 		\texttt{dv\_max} & the maximum allowable change in velocity in lab space coordinates per frame (e.g. mm/frame) \\[.2cm]
+		
+		\texttt{max\_dt} & The maximum allowed skip in frames over which a trajectory will be formed if using the multiframe method; e.g. if a particle is seen in frame 1, 2, 5, and 6, it will only be fully tracked if \texttt{max\_dt}$\geq 2$. Note that the missing frames (3 and 4 in the example) are subsequently interpolated using a cubic polynomial. \\[.2cm]
+		
+		\texttt{Ns} & A parameter of the multiframe method. It should be an odd integer. During tracking, links are formed only if a local signal to noise ratio does not exceed a certain level. The signal to noise ratio is calculated over windows of size \texttt{Ns}, with typical sizes of a few samples (e.g. 11). Note that the algorithm cannot build trajectories shorter than \texttt{Ns}.\\[.2cm]
+		
+		\texttt{NSR\_threshold} & The $NSR$ is a parameter of the multiframe algorithm used to assess the quality of a trajectories based on the notion that physical trajectories are smooth. The \texttt{NSR} takes values fraction positive values from 0 to infinity. A trajectory with $NSR=0$ is considered really good while one with $NSR>1$ is considered of quite low quality. Thus the \texttt{NSR\_threshold} is the highest acceptable \texttt{NSR} value. Trajectories with \texttt{NSR} above the given threshold are discarded. \\[.2cm]
 		
 		\texttt{mean\_flow} & Adds a constant mean flow parameter that
 		helps the tracking algorithm to track particles in flows with a constant drift; the format is [vx, vy, vz] in e.g. mm/frame. \\[.2cm]
