--- a/user_manual/user_manual.tex
+++ b/user_manual/user_manual.tex
@@ -66,7 +66,7 @@
 
 \begin{minipage}{14cm}
 	{\small \sffamily
-	Version: 1.2.3 \\
+	Version: 1.3.0 \\
 	Last updated: \today \\
 	Github repository: \url{https://github.com/ronshnapp/MyPTV} \\
 	Get help \& interact with our community: \url{https://github.com/ronshnapp/MyPTV/discussions}\\
@@ -964,6 +964,48 @@ Note: to easily perform manual stereo matching of several points in a given imag
 		\hline
 	\end{tabular}
 \end{table}
+
+
+
+
+
+
+
+\subsection{Analyze disparity}\label{sec:workflow_analyze_disparity}
+
+
+As in every measurement system, 3D-PTV has its uncertainty; In 3D-PTV uncertainties are derived from various factors, starting from the quality of the calibration, through the quality of the image analysis performed (i.e. segmentation), and the use of the stereo-matching parameters. Our way of quantifying the results is by comparing the results of the end process (i.e. the particle positions in 3D) with the input to the system. Thus, in this step we are taking the positions of the particles we managed to calculate in the stereo-matching step, re-project these results on the various cameras, and then compare the initial results of our image analysis with the re-projection. The deviations from one another are called \textit{disparities}.
+By analyzing statistics of the disparities the uncertainty in our measurements can be estimated; furthermore, we can iteratively apply our analysis, and check the disparities in order to improve the results of our experiments.
+
+Analyzing the disparities can be done in three easy ways using MyPTV. By running the workflow command "\texttt{analyze\_disparities}", a graphical user interphase (GUI) opens. The GUI allows plotting three kinds of figures which help in quantifying the results: a histogram for the disparities, a scatter-plot for the triangulation error and the disparity, and a visual figure showing the original blobs overlaid by the rep-projected particles. The parameters file parameters for this command are found in Table~\ref{tab:analyze_disparity}. 
+
+
+
+\begin{table}[!ht]
+	\centering
+	\caption{The \texttt{params\_file.yml} parameters for the \textbf{analyze disparity} step. All paths to files are relative to the \texttt{workflow.py} script.}
+	\label{tab:analyze_disparity}
+	\begin{tabular}{l m{13cm}}
+		\hline
+		Parameter & Description\\[.1cm]
+		\hline
+		
+		\texttt{blob\_files} & Names of files that hold the segmented particles for each camera, separated by commas; for example: \texttt{blobs\_cam1, blobs\_cam2, blobs\_cam3} \\[.1cm]
+		
+		\texttt{particle\_filename} & Name of the file containing the  stereo-matching results\\[.1cm]
+		
+		\texttt{camera\_names} & Names of the cameras separated by commas; for example: \texttt{cam1, cam2, cam3} \\[.1cm]
+		
+		\texttt{max\_err} & The maximal error used in the stereo-matching step (in physical units, e.g. millimeters) \\[.1cm]
+		
+		\texttt{min\_cam\_match} & The minimum number of cameras that can be used to triangulate a particle, as used in the stereo-matching step \\[.1cm]
+		
+		\hline
+	\end{tabular}
+\end{table}
+
+
+
 
 
 
